[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.docformatter]
recursive = true
pre-summary-newline = true
in-place = true
exclude = ["__pycache__/"]

[tool.poe.tasks]
# code style
ruff = {cmd = "ruff src/ --fix", help = "Lints the project, fixing errors."}
docformatter = {cmd = "docformatter src/", help = "Formats docstrings."}
black = {cmd = "black src/", help = "Formats the code."}
toml-sort = {cmd = "toml-sort pyproject.toml", help = "Sorts pyproject.toml file."}
# packaging
export-dependencies = {script = "scripts.export-dependencies:main", help = "Exports dependencies to a requirements.txt format, one file for each group of depencies."}

[tool.poe.tasks.docs]
help = "Starts mkdocs development server."
sequence = [
  {ref = "docformatter"},
  {cmd = "mkdocs serve"}
]

[tool.poe.tasks.format]
help = "Formats the package with ruff, docformatter, black, and toml-sort."
sequence = ["toml-sort", "ruff", "docformatter", "black"]

[tool.poe.tasks.publish-package]
help = "Builds the package and publishes to PyPI."
sequence = [
  {ref = "export-dependencies"},
  {script = "scripts.publish-package:main"}
]

[tool.poe.tasks.test]
help = "Run tests against the package."
sequence = [
  {cmd = "pytest -s -x --cov=sesg -vv src/sesg"},
  {cmd = "coverage html"}
]

[tool.poetry]
name = "sesg"
version = "0.0.12"
description = "SeSG is a tool developed to help Systematic Literature Review researchers, specifically at the step of building a search string."
authors = ["Demetrius Panovitch <demetrius.mp789@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
  {include = "sesg", from = "src"}
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
bertopic = "^0.14.1"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
aiometer = "^0.4.0"
httpx = "^0.24.0"
graphviz = "^0.20.1"
scikit-learn = "^1.2.2"
levenshtein = "^0.20.9"
torch = "^2.0.0"
nltk = "^3.8.1"
numpy = "1.23.5"
umap-learn = "^0.5.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pre-commit = "^3.2.2"
poethepoet = "^0.19.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.6"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
docformatter = {extras = ["tomli"], version = "^1.6.0"}
toml-sort = "^0.23.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[tool.poetry.urls]
Documentation = "https://sesg.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/demetrius-mp/sesg"
"Issue Tracker" = "https://github.com/demetrius-mp/sesg/issues"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.ruff]
extend-select = ["I001"]
unfixable = ["F841"]
exclude = [".venv"]
ignore-init-module-imports = true

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["experiment"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.taskipy.tasks]
# group fmt
lint = {cmd = "ruff src/sesg", help = "Lints the package with ruff."}
lint-fix = {cmd = "ruff src/sesg --fix", help = "Fixes all lint errors reported by ruff."}
fmt-docstrings = {cmd = "docformatter src/", help = "Formats docstrings."}
sort-pyproject = {cmd = "toml-sort pyproject.toml", help = "Sorts pyproject.toml file."}
pre_fmt = "task lint-fix && task fmt-docstrings && task sort-pyproject"
fmt = {cmd = "black src/sesg", help = "Formats the package with black."}
# group docs
pre_docs = {cmd = "task fmt-docstrings"}
docs = {cmd = "mkdocs serve", help = "Starts mkdocs development server."}
# group test
pre_test = "task lint"
test = {cmd = "pytest -s -x --cov=sesg -vv src/sesg", help = "Runs pytest with coverage."}
post_test = "coverage html"
show-coverage = {cmd = "google-chrome htmlcov/index.html", help = "Opens the coverage reports with google-chrome."}
# group package
export-dependencies = {cmd = "python scripts/export-dependencies.py", help = "Exports dependencies to a requirements.txt format, one file for each group of depencies."}
pre_publish-package = "task export-dependencies"
publish-package = {cmd = "python scripts/publish-package.py", help = "Builds the package and publishes to PyPI."}

[tool.tomlsort]
in_place = true
